--- a/mobile/src/main/res/layout/activity_odb2_a.xml
+++ b/mobile/src/main/res/layout/activity_odb2_a.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:custom="http://schemas.android.com/apk/res-auto"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
 
     android:id="@+id/activity_odb2_a"
     android:layout_width="match_parent"
@@ -13,19 +12,18 @@
     <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
         android:id="@+id/tv_log"
-        android:visibility="visible"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        custom:layout_constraintBottom_toBottomOf="parent"
-        custom:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="64dp"
-        tools:layout_constraintLeft_creator="1"
+        android:visibility="visible"
+        custom:layout_constraintBottom_toBottomOf="parent"
         custom:layout_constraintLeft_toLeftOf="parent"
-        custom:layout_constraintTop_toTopOf="parent">
-
+        custom:layout_constraintRight_toRightOf="parent"
+        custom:layout_constraintTop_toTopOf="parent"
+        tools:layout_constraintBottom_creator="1"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintTop_creator="1">
 
 
     </TableLayout>
