--- a/mobile/src/main/res/layout/gauge_layout_3.xml
+++ b/mobile/src/main/res/layout/gauge_layout_3.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TableRow xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:custom="http://schemas.android.com/tools"
-    android:layout_height="match_parent"
-    android:layout_width="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -15,12 +13,11 @@
         <uk.co.boconi.emil.obd2aa.ArcProgress
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_centerInParent="true"
             android:layout_alignParentLeft="true"
+            android:layout_centerInParent="true"
             android:tag="gauge_1"
 
             />
-
 
 
         <!-- right column -->
@@ -28,8 +25,8 @@
         <uk.co.boconi.emil.obd2aa.ArcProgress
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_centerInParent="true"
             android:layout_alignParentRight="true"
+            android:layout_centerInParent="true"
             android:tag="gauge_2" />
 
 
@@ -38,21 +35,22 @@
         <RelativeLayout
             android:layout_width="180dp"
             android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:layout_centerInParent="true">
+            android:layout_centerInParent="true"
+            android:layout_gravity="center">
+
             <uk.co.boconi.emil.obd2aa.ArcProgress
+                android:id="@+id/top_gauge"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="15dp"
-                android:id="@+id/top_gauge"
                 android:tag="gauge_3" />
 
             <uk.co.boconi.emil.obd2aa.ArcProgress
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_gravity="center_horizontal"
                 android:layout_alignParentBottom="true"
+                android:layout_gravity="center_horizontal"
                 android:layout_marginBottom="15dp"
                 android:tag="gauge_4" />
 
