--- a/mobile/src/main/res/layout/spinner_layout.xml
+++ b/mobile/src/main/res/layout/spinner_layout.xml
@@ -1,24 +1,20 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--  Single Item Design -->
-<LinearLayout xmlns:android= "http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?><!--  Single Item Design -->
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    >
+    android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/img"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="2dp"
         android:layout_gravity="center_vertical"
-        />
+        android:padding="2dp" />
+
     <TextView
         android:id="@+id/txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="2dp"
         android:layout_gravity="center_vertical"
-        >
-    </TextView>
+        android:padding="2dp"></TextView>
 </LinearLayout>
