--- a/mobile/src/main/res/layout-land/activity_odb2_a.xml
+++ b/mobile/src/main/res/layout-land/activity_odb2_a.xml
@@ -2,17 +2,13 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:custom="http://schemas.android.com/apk/res-auto"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-
     android:id="@+id/activity_odb2_a"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="uk.co.boconi.emil.odb2aa.ODB2AA">
 
-
     <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/tv_log"
-
         android:visibility="visible"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -24,11 +20,8 @@
         android:layout_marginTop="64dp"
         tools:layout_constraintLeft_creator="1"
         custom:layout_constraintLeft_toLeftOf="parent"
-        custom:layout_constraintTop_toTopOf="parent">
+        custom:layout_constraintTop_toTopOf="parent" />
 
-
-
-    </TableLayout>
     <FrameLayout
         android:visibility="gone"
         android:layout_width="0dp"
@@ -52,7 +45,7 @@
             android:textAppearance="@style/font36"
             android:gravity="center"
             android:textSize="30sp" />
-    </FrameLayout>
 
+    </FrameLayout>
 
 </android.support.constraint.ConstraintLayout>
