--- a/mobile/src/main/res/layout/gauge_layout_1.xml
+++ b/mobile/src/main/res/layout/gauge_layout_1.xml
@@ -3,8 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
     <!-- Left column -->
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -17,9 +17,7 @@
             android:layout_height="match_parent"
             android:layout_gravity="center_horizontal|center_vertical"
             android:layout_weight="1"
-            android:tag="gauge_2"
-
-            />
+            android:tag="gauge_2" />
 
         <uk.co.boconi.emil.obd2aa.ArcProgress
             android:layout_width="match_parent"
@@ -27,6 +25,7 @@
             android:layout_gravity="center_horizontal|center_vertical"
             android:layout_weight="1"
             android:tag="gauge_3" />
+
     </LinearLayout>
 
     <!-- Middle column -->
@@ -42,13 +41,12 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
-
             android:tag="gauge_1" />
 
     </LinearLayout>
-    >
 
-    <!-- right column -->
+    <!-- Right column -->
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -69,7 +67,6 @@
             android:layout_gravity="center_horizontal|center_vertical"
             android:layout_weight="1"
             android:tag="gauge_5" />
-
 
     </LinearLayout>
 
