--- a/mobile/src/main/res/layout/gauge_layout_2.xml
+++ b/mobile/src/main/res/layout/gauge_layout_2.xml
@@ -7,38 +7,31 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:tag="wrapper_layout">
-        <!-- Left column -->
 
+        <!-- Left column -->
 
         <uk.co.boconi.emil.obd2aa.ArcProgress
             android:layout_width="226dp"
             android:layout_height="226dp"
             android:layout_gravity="center_vertical|start"
-
-            android:tag="gauge_2"
-
-            />
+            android:tag="gauge_2" />
 
 
         <!-- Middle column -->
-
 
         <uk.co.boconi.emil.obd2aa.ArcProgress
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
-
             android:tag="gauge_1" />
 
-        <!-- right column -->
+        <!-- Right column -->
 
         <uk.co.boconi.emil.obd2aa.ArcProgress
             android:layout_width="226dp"
             android:layout_height="226dp"
             android:layout_gravity="center_vertical|end"
-
             android:tag="gauge_3" />
-
 
     </FrameLayout>
 
