--- a/mobile/src/main/res/layout/gauge_layout_3.xml
+++ b/mobile/src/main/res/layout/gauge_layout_3.xml
@@ -7,20 +7,17 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:tag="wrapper_layout">
-        <!-- Left column -->
 
+        <!-- Left column -->
 
         <uk.co.boconi.emil.obd2aa.ArcProgress
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_alignParentLeft="true"
             android:layout_centerInParent="true"
-            android:tag="gauge_1"
+            android:tag="gauge_1" />
 
-            />
-
-
-        <!-- right column -->
+        <!-- Right column -->
 
         <uk.co.boconi.emil.obd2aa.ArcProgress
             android:layout_width="match_parent"
@@ -28,7 +25,6 @@
             android:layout_alignParentRight="true"
             android:layout_centerInParent="true"
             android:tag="gauge_2" />
-
 
         <!-- Middle column -->
 
