--- a/mobile/src/main/res/layout/pidlist.xml
+++ b/mobile/src/main/res/layout/pidlist.xml
@@ -4,7 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-
     android:orientation="vertical">
 
     <EditText
@@ -12,13 +11,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="left"
-        android:maxLines="1"></EditText>
+        android:maxLines="1" />
 
     <ListView
         android:id="@+id/List"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:choiceMode="singleChoice"></ListView>
+        android:choiceMode="singleChoice" />
 
 
 </LinearLayout>
