--- a/mobile/src/main/res/layout/spinner_layout.xml
+++ b/mobile/src/main/res/layout/spinner_layout.xml
@@ -16,5 +16,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:padding="2dp"></TextView>
+        android:padding="2dp" />
+
 </LinearLayout>
