--- a/mobile/src/main/res/xml/speedcamprefs.xml
+++ b/mobile/src/main/res/xml/speedcamprefs.xml
@@ -2,89 +2,89 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     android:title="@string/speedcam_settings">
 
+    <CheckBoxPreference
+        android:defaultValue="true"
+        android:key="streetcard"
+        android:title="@string/streetcard" />
 
+    <CheckBoxPreference
+        android:defaultValue="true"
+        android:key="ShowSpeedCamWarrning"
+        android:title="@string/ShowSpeedCamWarrning" />
 
-        <CheckBoxPreference android:title="@string/streetcard"
-            android:defaultValue="true"
-            android:key="streetcard"
-            />
+    <CheckBoxPreference
+        android:defaultValue="false"
+        android:key="useimperials"
+        android:summary="@string/use_imperials_desc"
+        android:title="@string/use_imperials" />
 
+    <EditTextPreference
+        android:defaultValue="1000"
+        android:dependency="ShowSpeedCamWarrning"
+        android:dialogTitle="@string/when_to_display"
+        android:inputType="number"
+        android:key="visual_display"
+        android:summary="@string/when_to_display_desc"
+        android:title="@string/when_to_display" />
 
-        <CheckBoxPreference android:title="@string/ShowSpeedCamWarrning"
-            android:defaultValue="true"
-            android:key="ShowSpeedCamWarrning"
-            />
-        <CheckBoxPreference android:title="@string/use_imperials"
-            android:defaultValue="false"
-            android:key="useimperials"
-            android:summary="@string/use_imperials_desc"
-            />
-        <EditTextPreference android:title="@string/when_to_display"
-            android:key="visual_display"
-            android:dependency="ShowSpeedCamWarrning"
-            android:inputType="number"
-            android:defaultValue="1000"
-            android:dialogTitle="@string/when_to_display"
-            android:summary="@string/when_to_display_desc"/>
+    <EditTextPreference
+        android:defaultValue="800"
+        android:dependency="ShowSpeedCamWarrning"
+        android:dialogTitle="@string/audio_w1"
+        android:inputType="number"
+        android:key="audio_1"
+        android:summary="@string/audio_w1_desc"
+        android:title="@string/audio_w1" />
 
-        <EditTextPreference android:title="@string/audio_w1"
-            android:key="audio_1"
-            android:dependency="ShowSpeedCamWarrning"
-            android:inputType="number"
-            android:defaultValue="800"
-            android:dialogTitle="@string/audio_w1"
-            android:summary="@string/audio_w1_desc"/>
+    <EditTextPreference
+        android:defaultValue="400"
+        android:dependency="ShowSpeedCamWarrning"
+        android:dialogTitle="@string/audio_w2"
+        android:inputType="number"
+        android:key="audio_2"
+        android:summary="@string/audio_w2_desc"
+        android:title="@string/audio_w2" />
 
-        <EditTextPreference android:title="@string/audio_w2"
-            android:key="audio_2"
-            android:dependency="ShowSpeedCamWarrning"
-            android:inputType="number"
-            android:defaultValue="400"
-            android:dialogTitle="@string/audio_w2"
-            android:summary="@string/audio_w2_desc"/>
+    <EditTextPreference
+        android:defaultValue="100"
+        android:dependency="ShowSpeedCamWarrning"
+        android:dialogTitle="@string/audio_w3"
+        android:inputType="number"
+        android:key="audio_3"
+        android:summary="@string/audio_w3_desc"
+        android:title="@string/audio_w3" />
 
-        <EditTextPreference android:title="@string/audio_w3"
-            android:key="audio_3"
-            android:dependency="ShowSpeedCamWarrning"
-            android:inputType="number"
-            android:defaultValue="100"
-            android:dialogTitle="@string/audio_w3"
-            android:summary="@string/audio_w3_desc"/>
+    <CheckBoxPreference
+        android:defaultValue="false"
+        android:dependency="ShowSpeedCamWarrning"
+        android:key="play_sound"
+        android:title="@string/play_sound" />
 
+    <CheckBoxPreference
+        android:defaultValue="false"
+        android:dependency="ShowSpeedCamWarrning"
+        android:key="use_mobile"
+        android:summary="@string/use_mobile_desc"
+        android:title="@string/use_mobile" />
 
-        <CheckBoxPreference android:title="@string/play_sound"
-            android:defaultValue="false"
-            android:key="play_sound"
-            android:dependency="ShowSpeedCamWarrning"
-            />
+    <ListPreference
+        android:defaultValue="3000"
+        android:dependency="ShowSpeedCamWarrning"
+        android:entries="@array/mobile_refresh_entries"
+        android:entryValues="@array/mobile_refresh_values"
+        android:key="mobile_update_freq"
+        android:numeric="integer"
+        android:summary="@string/update_mobile_freq_desc"
+        android:title="@string/update_mobile_freq" />
 
-        <CheckBoxPreference android:title="@string/use_mobile"
-            android:defaultValue="false"
-            android:key="use_mobile"
-            android:dependency="ShowSpeedCamWarrning"
-            android:summary="@string/use_mobile_desc"
-            />
-
-        <ListPreference
-            android:title="@string/update_mobile_freq"
-            android:key="mobile_update_freq"
-            android:numeric="integer"
-            android:entries="@array/mobile_refresh_entries"
-            android:entryValues="@array/mobile_refresh_values"
-            android:summary="@string/update_mobile_freq_desc"
-            android:defaultValue="3000"
-            android:dependency="ShowSpeedCamWarrning"
-            />
-
-        <MultiSelectListPreference
-            android:dialogTitle="@string/camera_type"
-            android:dependency="ShowSpeedCamWarrning"
-            android:key="cam_types"
-            android:summary="@string/camera_type_desc"
-            android:title="@string/camera_type"
-            android:entries="@array/cameratype"
-            android:entryValues="@array/cameratype_values"
-            android:defaultValue="@array/cameratype_values"
-            />
+    <MultiSelectListPreference
+        android:defaultValue="@array/cameratype_values"
+        android:dependency="ShowSpeedCamWarrning"
+        android:dialogTitle="@string/camera_type"
+        android:entries="@array/cameratype"
+        android:entryValues="@array/cameratype_values"
+        android:key="cam_types"
+        android:summary="@string/camera_type_desc"
+        android:title="@string/camera_type" />
 
 </PreferenceScreen>
