--- a/mobile/src/main/res/layout/mysettings.xml
+++ b/mobile/src/main/res/layout/mysettings.xml
@@ -38,8 +38,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="3"
-                    android:entries="@array/gaugenumbers"
-                    android:entryValues="@array/gaugenumbers"
+                    android:entries="@array/gaugeNumber"
+                    android:entryValues="@array/gaugeNumber"
                     android:spinnerMode="dialog"
                     android:textAlignment="center"
                     android:textSize="16sp" />
