--- a/mobile/src/main/res/values/arrays.xml
+++ b/mobile/src/main/res/values/arrays.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string-array name="gaugenumbers">
+    <string-array name="gaugeNumber">
         <item>1</item>
         <item>2</item>
         <item>3</item>
