--- a/mobile/src/main/res/layout/gauge_layout_2.xml
+++ b/mobile/src/main/res/layout/gauge_layout_2.xml
@@ -10,7 +10,7 @@
 
         <!-- Left column -->
 
-        <uk.co.boconi.emil.obd2aa.ArcProgress
+        <uk.co.boconi.emil.obd2aa.ui.ArcProgress
             android:layout_width="226dp"
             android:layout_height="226dp"
             android:layout_gravity="center_vertical|start"
@@ -19,7 +19,7 @@
 
         <!-- Middle column -->
 
-        <uk.co.boconi.emil.obd2aa.ArcProgress
+        <uk.co.boconi.emil.obd2aa.ui.ArcProgress
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
@@ -27,7 +27,7 @@
 
         <!-- Right column -->
 
-        <uk.co.boconi.emil.obd2aa.ArcProgress
+        <uk.co.boconi.emil.obd2aa.ui.ArcProgress
             android:layout_width="226dp"
             android:layout_height="226dp"
             android:layout_gravity="center_vertical|end"
