--- a/mobile/src/main/res/layout/gauge.xml
+++ b/mobile/src/main/res/layout/gauge.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -27,8 +28,8 @@
             android:layout_gravity=""
             android:layout_weight="5"
             android:onClick="togglelayout"
-            android:src="@drawable/ic_add_black_24dp"
-            android:tag="collapsed">
+            android:tag="collapsed"
+            app:srcCompat="@drawable/ic_add_black_24dp">
 
         </ImageButton>
 
