--- a/mobile/src/main/res/layout/mysettings.xml
+++ b/mobile/src/main/res/layout/mysettings.xml
@@ -220,7 +220,7 @@
                 android:id="@+id/parrent_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:divider="?android:dividerHorizontal"
+                android:divider="?attr/dividerHorizontal"
                 android:orientation="vertical"
                 android:showDividers="middle">
 
