--- a/mobile/src/main/res/layout/mysettings.xml
+++ b/mobile/src/main/res/layout/mysettings.xml
@@ -233,27 +233,29 @@
 
             </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/service_status"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:divider="?android:dividerHorizontal"
-        android:orientation="vertical"
-        android:showDividers="middle">
+            <LinearLayout
+                android:id="@+id/service_status"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:divider="?android:dividerHorizontal"
+                android:orientation="vertical"
+                android:showDividers="middle">
 
-        <TextView
-            android:id="@+id/torqueStatus"
-            android:textAppearance="@android:style/TextAppearance.Medium"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:id="@+id/odbStatus"
-            android:textAppearance="@android:style/TextAppearance.Medium"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
+                <TextView
+                    android:id="@+id/torqueStatus"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="@android:style/TextAppearance.Medium" />
 
-</LinearLayout>
+                <TextView
+                    android:id="@+id/odbStatus"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="@android:style/TextAppearance.Medium" />
+            </LinearLayout>
+
+        </LinearLayout>
+
         <LinearLayout
             android:id="@+id/notorque"
             android:layout_width="match_parent"
@@ -270,5 +272,5 @@
                 android:textSize="20sp" />
 
         </LinearLayout>
-</FrameLayout>
-    </ScrollView>
+    </FrameLayout>
+</ScrollView>
