--- a/mobile/src/main/res/values/attr.xml
+++ b/mobile/src/main/res/values/attr.xml
@@ -22,9 +22,9 @@
         <attr name="showUnit" format="boolean" />
         <attr name="showDecimal" format="boolean" />
 
-        <attr name="arc_scaleUnit" format="integer" />
-        <attr name="arc_scaleDivider" format="float" />
-        <attr name="arc_scaleDecimals" format="integer" />
+        <attr name="arc_scaleunit" format="integer" />
+        <attr name="arc_scaledivider" format="float" />
+        <attr name="arc_scaledecimals" format="integer" />
 
         <attr name="arc_text_size" format="dimension" />
         <attr name="arc_text_color" format="color" />
